--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/DHT sensor library @ ^1.4.6
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	arduino-libraries/NTPClient@^3.2.1
+	regenbogencode/ESPNowW@^1.0.2
